Fixed image stretch bug

--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ a h1 {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    width: 1000px;
+    width: 80%;
     margin: auto;
     overflow: hidden;
 
